packages/fluent-ai-candle/errors.txt
    Checking fluent_ai_candle v0.1.0 (/Volumes/samsung_t9/fluent-ai/packages/fluent-ai-candle)
error[E0433]: failed to resolve: unresolved import
 --> packages/fluent-ai-candle/src/memory/config/memory.rs:7:12
  |
7 | use crate::chat::config::ModelConfig;
  |            ^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `domain::chat`

error[E0432]: unresolved import `crate::completion`
  --> packages/fluent-ai-candle/src/engine.rs:12:12
   |
12 | use crate::completion::CompletionResponse;
   |            ^^^^^^^^^^
   |            |
   |            unresolved import
   |            help: a similar path exists: `domain::completion`

error[E0432]: unresolved import `builders`
  --> packages/fluent-ai-candle/src/lib.rs:85:9
   |
85 | pub use builders::{CandleFluentAi, CandleAgentRoleBuilder};
   |         ^^^^^^^^ help: a similar path exists: `cyrup_sugars::builders`

error[E0432]: unresolved import `crate::domain::http::requests::completion::CandleCompletionRequest`
  --> packages/fluent-ai-candle/src/context/extraction/extractor.rs:10:5
   |
10 | use crate::domain::http::requests::completion::CandleCompletionRequest as CompletionRequest;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----------------------^^^^^^^^^^^^^^^^^^^^^
   |     |                                          |
   |     |                                          help: a similar name exists in the module: `CompletionRequest`
   |     no `CandleCompletionRequest` in `domain::http::requests::completion`

error[E0432]: unresolved import `crate::domain::agent::role::CandleAgentRoleImpl`
  --> packages/fluent-ai-candle/src/domain/agent/chat.rs:13:5
   |
13 | use crate::domain::agent::role::CandleAgentRoleImpl as AgentRoleImpl;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^-------------------^^^^^^^^^^^^^^^^^
   |     |                           |
   |     |                           help: a similar name exists in the module: `AgentRoleImpl`
   |     no `CandleAgentRoleImpl` in `domain::agent::role`

error[E0432]: unresolved import `crate::domain::memory::config::memory::CandleMemoryConfig`
  --> packages/fluent-ai-candle/src/domain/agent/core.rs:10:5
   |
10 | use crate::domain::memory::config::memory::CandleMemoryConfig as ComprehensiveMemoryConfig;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |                                      |
   |     |                                      help: a similar name exists in the module: `MemoryConfig`
   |     no `CandleMemoryConfig` in `domain::memory::config::memory`

error[E0432]: unresolved import `crate::domain::memory::manager::CandleMemoryConfig`
  --> packages/fluent-ai-candle/src/domain/agent/core.rs:11:5
   |
11 | use crate::domain::memory::manager::CandleMemoryConfig as MemoryConfig;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------^^^^^^^^^^^^^^^^
   |     |                               |
   |     |                               help: a similar name exists in the module: `MemoryConfig`
   |     no `CandleMemoryConfig` in `domain::memory::manager`

error[E0432]: unresolved imports `crate::domain::memory::CandleMemory`, `crate::domain::memory::CandleMemoryError`, `crate::domain::memory::CandleMemoryTool`, `crate::domain::memory::CandleMemoryToolError`
  --> packages/fluent-ai-candle/src/domain/agent/core.rs:12:29
   |
12 | ...::{CandleMemory as Memory, CandleMemoryError as MemoryError, CandleMemoryTool as MemoryTool, CandleMemoryToolError as MemoryToolError};
   |       ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `CandleMemoryToolError` in `domain::memory`
   |       |                       |                                 |
   |       |                       |                                 no `CandleMemoryTool` in `domain::memory`
   |       |                       no `CandleMemoryError` in `domain::memory`
   |       no `CandleMemory` in `domain::memory`
   |
help: a similar name exists in the module
   |
12 - use crate::domain::memory::{CandleMemory as Memory, CandleMemoryError as MemoryError, CandleMemoryTool as MemoryTool, CandleMemoryToolError as MemoryToolError};
12 + use crate::domain::memory::{BaseMemory as Memory, CandleMemoryError as MemoryError, CandleMemoryTool as MemoryTool, CandleMemoryToolError as MemoryToolError};
   |
help: a similar name exists in the module
   |
12 - use crate::domain::memory::{CandleMemory as Memory, CandleMemoryError as MemoryError, CandleMemoryTool as MemoryTool, CandleMemoryToolError as MemoryToolError};
12 + use crate::domain::memory::{CandleMemory as Memory, CandleMemoryError as MemoryError, CandleMemoryTool as MemoryTool, MemoryToolError as MemoryToolError};
   |

error[E0432]: unresolved import `crate::domain::memory::CandleMemory`
  --> packages/fluent-ai-candle/src/domain/agent/role.rs:18:5
   |
18 | use crate::domain::memory::CandleMemory;
   |     ^^^^^^^^^^^^^^^^^^^^^^^------------
   |     |                      |
   |     |                      help: a similar name exists in the module: `BaseMemory`
   |     no `CandleMemory` in `domain::memory`

error[E0432]: unresolved import `crate::domain::agent::chat::CandleChatError`
   --> packages/fluent-ai-candle/src/domain/agent/role.rs:274:5
    |
274 | use crate::domain::agent::chat::CandleChatError as ChatError;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `CandleChatError` in `domain::agent::chat`

error[E0432]: unresolved import `super::types::CommandRegistryStats`
  --> packages/fluent-ai-candle/src/domain/chat/commands/registry.rs:11:59
   |
11 | use super::types::{self, CandleCommandError, CommandInfo, CommandRegistryStats, ImmutableChatCommand};
   |                                                           ^^^^^^^^^^^^^^^^^^^^ no `CommandRegistryStats` in `domain::chat::commands::types`

error[E0432]: unresolved import `execution::CandleCommandExecutor`
  --> packages/fluent-ai-candle/src/domain/chat/commands/mod.rs:18:9
   |
18 | pub use execution::CandleCommandExecutor;
   |         ^^^^^^^^^^^---------------------
   |         |          |
   |         |          help: a similar name exists in the module: `CandleCommandError`
   |         no `CandleCommandExecutor` in `domain::chat::commands::execution`

error[E0432]: unresolved imports `parsing::CandleCommandParser`, `parsing::CandleParseError`, `parsing::CandleParseResult`
  --> packages/fluent-ai-candle/src/domain/chat/commands/mod.rs:20:19
   |
20 | pub use parsing::{CandleCommandParser, CandleParseError, CandleParseResult};
   |                   ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^ no `CandleParseResult` in `domain::chat::commands::parsing`
   |                   |                    |
   |                   |                    no `CandleParseError` in `domain::chat::commands::parsing`
   |                   no `CandleCommandParser` in `domain::chat::commands::parsing`
   |                   help: a similar name exists in the module: `CandleCommandError`

error[E0432]: unresolved import `registry::CandleCommandRegistry`
  --> packages/fluent-ai-candle/src/domain/chat/commands/mod.rs:21:9
   |
21 | pub use registry::CandleCommandRegistry;
   |         ^^^^^^^^^^---------------------
   |         |         |
   |         |         help: a similar name exists in the module: `CommandRegistry`
   |         no `CandleCommandRegistry` in `domain::chat::commands::registry`

error[E0432]: unresolved import `response::CandleResponseFormatter`
  --> packages/fluent-ai-candle/src/domain/chat/commands/mod.rs:22:9
   |
22 | pub use response::CandleResponseFormatter;
   |         ^^^^^^^^^^-----------------------
   |         |         |
   |         |         help: a similar name exists in the module: `ResponseFormatter`
   |         no `CandleResponseFormatter` in `domain::chat::commands::response`

error[E0432]: unresolved import `validation::CandleCommandValidator`
  --> packages/fluent-ai-candle/src/domain/chat/commands/mod.rs:24:9
   |
24 | pub use validation::CandleCommandValidator;
   |         ^^^^^^^^^^^^----------------------
   |         |           |
   |         |           help: a similar name exists in the module: `CommandValidator`
   |         no `CandleCommandValidator` in `domain::chat::commands::validation`

error[E0432]: unresolved import `crate::domain::chat::commands::CandleImmutableChatCommand`
